--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	max-width: 1600px;
     height: 900px;
-	background-color: #E5E5E5;
+	background-color: #E5E5E5;;
 	font-style: normal;
     font-weight: normal;
     font-family: "SF Pro Display", "PT Serif Caption", sans-serif;
@@ -15,40 +15,54 @@ body {
 	height: 100px;
 	width: 100%;
 	margin: 0;
-	padding-top: 34px;
-	background-color: #E5E5E5;
+	/*padding-top: 35px;*/
+	/*background-color: #E5E5E5;*/
 }
 
+.main-header-sidebar {
+	height: 100px;
+	width: 16%;
+	background-color: #3639A4;
+}
+
+
 .logo-block {
-	width: 9.5%;
-	padding-left: 56px;
+
+	padding-top: 35px;
+	width: 15%;
+	padding-left: 3.5%;
+	
 }
 
 
 .main-header__logo-link {
 	display: inline-block;
-	color: #000000;
+	color: #ffffff;
 }
 
 
 .logo-link-text {
 	display: inline-block;
-	padding-left: 16px;	
+   	/*padding-left: 16px;	*/
     font-size: 24px;
     line-height: 29px;
 }
 
 
 .speed-check {
+	display: inline-block;
 	/*min-width: 700px;*/
-	width: 72%;
+    padding-top: 35px;    
+    padding-left: 56px;
+    width: 67.5%;
     font-size: 24px;
     line-height: 29px;
-    padding-left: 100px;
+    color: #D90429;
 }
 
 .user-profile {
-    width: 18.5%;
+	padding-top: 35px;  
+    width: 17.5%;
 }
 
 .user-block-ava {
@@ -61,6 +75,7 @@ body {
 }
 
 .user-block-name {
+	color: #3639A4;
 	font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -68,6 +83,7 @@ body {
 }
 
 .user-block-role {
+   color: #8D99AE;
    font-style: normal;
    font-weight: normal;
    font-size: 10px;
@@ -77,14 +93,16 @@ body {
 .main-container {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: flex-start;
 	height: 800px;
 	background-color: #E5E5E5;
 }
 
 .container-navigation {
-	max-width: 17.5%;
+	max-width: 15%;
+	background-color: #3639A4;
 }
+
 
 .main-navigation ul {
 	margin: 0;
@@ -102,13 +120,13 @@ body {
     vertical-align: top;
     margin-left: 40px;
     padding-left: 56px;
-}
+    }
 
 .main-navigation a {
 	display: block;
 	width: 200px;
 	height: 72px;
-	color: #000000;
+	color: #ffffff;
 	text-decoration: none;
 }
 
@@ -153,8 +171,9 @@ body {
 }
 
 .buttons {
-	display: none;
+	/*display: none;*/
 	margin-top: 47px;
+
 }
 	
 
@@ -167,7 +186,7 @@ body {
     line-height: 17px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    background: #C4C4C4;
+    background: #3639A4;
     border-radius: 4px;
     border: 1px solid #7D7E8D;    
 }
@@ -176,8 +195,49 @@ body {
 	margin-left: 36px;
 }
 
+
+.container-result {
+	visibility: visible;
+    display: inline-block;
+    min-width: 430px;
+    min-height: 400px;
+
+/*	margin-top: 120px;*/
+}
+
+/*.result-name {
+	font-size: 18px;
+    line-height: 21px;
+    color: #010101;
+}*/
+
+.result-discribe {
+	/*margin-top: 24px;*/
+	max-width: 26.7%;
+	min-height: 40px;
+	font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.video-result {
+    min-height: 280px;
+    width: 426px;
+
+}
+
+
+#frameresult {
+	width: 426px;
+	height: 240px;
+	border: 1px solid #7D7E8D; 	
+}
+
+
+
+
 .container-input {
-/*	display: none;*/
+	display: none;
 	min-width: 280px;
 	min-height: 400px;
 }
@@ -209,21 +269,3 @@ body {
 	margin-top: 47px;
 }
 
-.container-result {
-	/*visibility: hidden;*/
-	max-width: 18.5%;
-	margin-top: 120px;
-}
-
-.result-name {
-	font-size: 18px;
-    line-height: 21px;
-    color: #010101;
-}
-
-.result-discribe {
-	margin-top: 24px;
-	font-size: 14px;
-    line-height: 17px;
-    color: #000000;
-}
