--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-	max-width: 1600px;
-    height: 900px;
+	width: 100%;
+	height: 100%;
 	background-color: #E5E5E5;;
 	font-style: normal;
     font-weight: normal;
@@ -8,61 +8,69 @@ body {
     color: #000000;
 }
 
-.main-header {
+.header {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
 	height: 100px;
 	width: 100%;
 	margin: 0;
-	/*padding-top: 35px;*/
-	/*background-color: #E5E5E5;*/
 }
 
-.main-header-sidebar {
+.header-sidebar {
 	height: 100px;
-	width: 16%;
+	min-width: 15%;
 	background-color: #3639A4;
 }
 
 
 .logo-block {
-
-	padding-top: 35px;
-	width: 15%;
-	padding-left: 3.5%;
-	
+ 	padding-top: 35px;
+	/*width: 15%;*/
 }
 
-
-.main-header__logo-link {
-	display: inline-block;
+.header__logo-link {
+    display: inline-block;
+    padding-left: 40px;
+ 	width: 140px;
 	color: #ffffff;
+	text-decoration: none;
 }
 
+.s_speed {
+    display: inline-block;
+    margin-right: 0;
+}
 
 .logo-link-text {
 	display: inline-block;
-   	/*padding-left: 16px;	*/
+	margin-left: 0;
     font-size: 24px;
     line-height: 29px;
+}
+
+.main-header {
+	display: flex;
+	flex-direction: row;
+	width: auto;
+	height: 100px;
 }
 
 
 .speed-check {
 	display: inline-block;
-	/*min-width: 700px;*/
-    padding-top: 35px;    
+	padding-top: 35px;    
     padding-left: 56px;
-    width: 67.5%;
+    width:65%;
     font-size: 24px;
     line-height: 29px;
     color: #D90429;
 }
 
 .user-profile {
-	padding-top: 35px;  
-    width: 17.5%;
+
+	padding-top: 32px;  
+    width: 15%;
 }
 
 .user-block-ava {
@@ -90,16 +98,16 @@ body {
    line-height: 12px;
 }
 
-.main-container {
+.sidebar-container {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
-	height: 800px;
 	background-color: #E5E5E5;
 }
 
 .container-navigation {
-	max-width: 15%;
+	padding-top: 108px;
+	width: 15%;
 	background-color: #3639A4;
 }
 
@@ -109,60 +117,119 @@ body {
 	padding: 0;
 	list-style: none;
 	margin-top: 36px;
+	padding-left: 48px;
 	
 }
 
 .main-navigation li {
+	width: 200px;
+	height: 72px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
-    vertical-align: top;
-    margin-left: 40px;
-    padding-left: 56px;
-    }
+    vertical-align: middle;
+/*    padding-left: 48px;
+ */
+}
 
 .main-navigation a {
 	display: block;
-	width: 200px;
-	height: 72px;
 	color: #ffffff;
 	text-decoration: none;
 }
 
+.main-navigation img {
+    padding-right: 16px;
+}
+
+.main-container {
+    display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+    width: 85%;
+}
+
+
 .container-video {
+	min-width: 40%;
 	max-width: 62.5%;
+	padding-left: 40px;
+	padding-top: 60px;
 }
 
 .video-toggle {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    height: 73px;
+    height: 46px;
 	font-size: 18px;
     line-height: 21px;
+    color: #3639A4;
 }
 
 .container-video-upload {
 	width: 304px;
-	height: 72px;
+	height: 46px;
 	padding-left: 16px;
-	border-bottom: 1px solid #474747;
+	border-bottom: 1px solid #3639A4;
 }
 
 .container-video-calculation {
 	width: 304px;
-	height: 72px;
+	height: 46px;
 	padding-left: 16px;
-	color: #474747;
+	color: #8D99AE;
+	border-bottom: 1px solid #8D99AE;
 }
 
+.select {
+/*	display: none;*/
+	padding-top: 23px;
+}
+
+
+
+.btn-select {
+	position: relative;
+	width: 48px;
+	height: 48px;
+	border: 3px solid #3639A4;
+	border-radius: 4px;
+
+}
+
+.btn-select-img {
+	position: absolute;
+	margin-top: -22px;
+	margin-left: -23px;
+ 
+}
+
+
 .video-translation {
-	margin-top: 40px;
+	margin-top: 14px;
 	width: 640px;
 	height: 360px;
-	background: #9C9B9B;
+	background: gray;
 }
+
+.windows {
+	/*display: none;*/
+	margin-top: 38px;
+
+}
+.container-video-upload {
+	/*display: none;*/
+	color: #8D99AE;
+	border-bottom: 1px solid #8D99AE;
+}
+.container-video-calculation {
+	/*display: none;*/
+	color: #3639A4;
+	border-bottom: 1px solid #3639A4;;
+}
+
 
 #framevideo {
 	width: 640px;
@@ -171,9 +238,8 @@ body {
 }
 
 .buttons {
-	/*display: none;*/
-	margin-top: 47px;
-
+/*	display: none;*/
+	margin-top: 38px;
 }
 	
 
@@ -188,7 +254,7 @@ body {
     text-transform: uppercase;
     background: #3639A4;
     border-radius: 4px;
-    border: 1px solid #7D7E8D;    
+    color: #FFFFFF;
 }
 
 .right {
@@ -196,76 +262,118 @@ body {
 }
 
 
-.container-result {
-	visibility: visible;
-    display: inline-block;
-    min-width: 430px;
-    min-height: 400px;
+.warning_message {
+/*	display: none;*/
+	display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+	width: auto;
+	height: 24px;
+    padding-top: 40px;
 
-/*	margin-top: 120px;*/
 }
 
-/*.result-name {
-	font-size: 18px;
-    line-height: 21px;
-    color: #010101;
-}*/
+.warning_mess {
+	
+	padding-left: 17px;
+
+
+}
+
+
+.container-result {
+    display: inline-block;
+    width: 280px;
+    min-height: 400px;
+    padding-top: 100px;
+    padding-left: 40px;
+}
+
 
 .result-discribe {
-	/*margin-top: 24px;*/
-	max-width: 26.7%;
+/*	display: none;*/
+	max-width: 426px;
 	min-height: 40px;
 	font-size: 14px;
     line-height: 20px;
     color: #000000;
 }
 
+.car-namber {
+	color: red;
+}
+
 .video-result {
+/*	display: none;*/
+	padding-top: 100px;
     min-height: 280px;
     width: 426px;
 
 }
 
+#test_canvas  {
+	background-color: grey;
+	border: 1px solid #7D7E8D; 	
+}
 
-#frameresult {
+
+/*#frameresult {
 	width: 426px;
 	height: 240px;
 	border: 1px solid #7D7E8D; 	
-}
+}*/
 
 
 
 
 .container-input {
-	display: none;
+	/*display: none;*/
+	display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+	padding-top: 40px;
 	min-width: 280px;
 	min-height: 400px;
+	color: #3639A4;
+	display: none;
+	
 }
 
 .your-data {
-	margin-top: 47px;
+	padding-top: 32px;
+	padding-left: 16px;
     font-size: 18px;
     line-height: 21px;
-    color: #010101;
+    color: #3639A4;
 }
 
 .your-data-form input {
     width: 240px;
     height: 32px;
-    border: 1px solid #7D7E8D;
+ /*   padding-left: 16px;*/
+    border: 1px solid #CFD1D6;
+    border-radius: 4px;
 }
+
+.result-form {
+	max-width: 400px;
+
+}
+
 
 .result {
 	padding-top: 24px;
 	padding-bottom: 8px;
 	font-size: 14px;
     line-height: 17px;
-    color: #7D7E8D;
+    color: #8D99AE;
 }
 
-.bottom {
-	display: block;
+.submit {
+    margin-top: 60px;
 	width: 240px;
-	margin-top: 47px;
-}
+	border: 1px solid #CFD1D6;
+	border-radius: 4px;
 
+}
