--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+html,body {
 	width: 100%;
 	height: 100%;
 	background-color: #E5E5E5;
@@ -102,6 +102,7 @@ body {
 	flex-direction: row;
 	justify-content: flex-start;
 	width: 100%;
+   height: 100%;
 
 }
 
@@ -252,8 +253,8 @@ body {
 
 
 .canvas-translation {
-	padding-top: 32px;
-    width: 100%;
+	margin-top: 32px;
+    /* width: 100%; */
     height: 360px;
 }
 
@@ -296,6 +297,7 @@ body {
 
 .warning-red {
 	display: flex;
+   display: none;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
